--- a/labs/khoi/object-and-array/views/index.html
+++ b/labs/khoi/object-and-array/views/index.html
@@ -9,7 +9,7 @@
 
     <h1>List</h1>
 
-    <p id="dspProducts"></p>
+    <p id="dspProductList"></p>
 
     <script src="../scripts/functions.js"></script>
     <script src="../scripts/main.js"></script>
