--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,64 @@
+/* Common styles */
+*{box-sizing: border-box;}
 body{font-family: Arial;}
-input,button{margin: 5px;height: 30px;font-size: 15px;}
+header, main, footer{width: 100%;}
+main{padding: 5px;}
+#container{width:100%;margin: auto;padding: 0;display: flex;flex-direction: column;align-items: center;}
+
+/* Error messages */
 .messageError{color: #ff0000;}
 .messageSucceed{color: #008000;}
+
+/* Sign in form and sign up */
+.frm-login, .frm-create-user{width: 500px;text-align: center;}
+.frm-login input, .frm-create-user input{
+    width: 350px;
+    height: 50px;
+    padding: 5px;
+    margin: 5px;
+    font-size: 20px;
+
+    /* Clear the user's operating system's theme */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+
+    /* Apply own styles */
+    -webkit-transition: all 0.30s ease-in-out;
+    -moz-transition: all 0.30s ease-in-out;
+    -o-transition: all 0.30s ease-in-out;
+    outline: none;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+.frm-login input:focus, .frm-create-user input:focus{border: 1px solid #0094ff;box-shadow: 0 0 5px #0094ff;}
+
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+.button-login, .button-create-user {
+    margin: 10px 10px 40px 10px;
+    width: 200px;
+    background-color: #2d6aa5;
+    color: #ffffff;
+    border: 2px solid #2d6aa5;
+    position: center;
+    bottom: 10px;
+    border-radius: 40px;
+}
+.button-login:hover, .button-create-user:hover {background-color: #ffffff;color: #8a8a8a;}
+
+.frm-login a,.frm-create-user a{color: #2d6aa5; text-decoration: underline;}
+.frm-login a:hover, .frm-create-user a:hover{color: #2d6aa5; text-decoration: none;}
+
+/* Creating user's form */
