--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ header, main, footer{width: 100%;}
     font-size: 18px;
 }
 
-.chatContent{padding: 5px}
+.chatContents{padding: 5px}
 
 .userinfo{padding: 10px;}
 
