--- a/views/login.html
+++ b/views/login.html
@@ -16,5 +16,6 @@
 <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-database.js"></script>
 <script src="../scripts/login.js"></script>
+<script src="../scripts/config.js"></script>
 </body>
 </html>
