--- a/views/login.html
+++ b/views/login.html
@@ -12,6 +12,7 @@
 <p id="paragraf"></p>
 
 
+<script src="../external-libraries/jquery-3.3.1.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-database.js"></script>
