login redirectar till index

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ChatApp - Chat now...</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="external-resources/web-addons.css">
     <script src="external-resources/jquery-3.3.1.min.js"></script>
     <script src="external-resources/web-addons.js"></script>
@@ -47,8 +47,8 @@
     </div>
 
     <!-- Script -->
-    <script src="scripts/config.js"></script>
-    <script src="scripts/common.js"></script>
-    <script src="scripts/chatapp.js"></script>
+    <script src="../scripts/config.js"></script>
+    <script src="../scripts/common.js"></script>
+    <script src="../scripts/chatapp.js"></script>
 </body>
 </html>
