--- a/backup/views/login.html
+++ b/backup/views/login.html
@@ -31,7 +31,7 @@
 					<input type="password" id="pass" placeholder="Your password">
 					<button>Login</button>
 					<div id="link-registration">
-						<span>Don't have an account? <a href="registration.html">Sign Up!</a></span>
+						<span>Don't have an account? <a href="../../views/registration.html">Sign Up!</a></span>
 					</div>
 				</form>
 			</div>
