--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="container">
 
-        <div id="chatApp" class="chatApp-hidden">
+        <div id="chatApp">
             <div id="dspPartMain">
                 <div id="logga">
                     <div>
@@ -48,7 +48,6 @@
 
     <!-- Script -->
     <script src="../scripts/config.js"></script>
-    <script src="../scripts/common.js"></script>
     <script src="../scripts/chatapp.js"></script>
 </body>
 </html>
