--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
             <div id="dspPartFunctions">
                 <div id="dspUserInfo" class="userinfo">
                     <p id="dspCurrentUser"></p>
-                    <p><a href="signout.html">Sign out</a></p>
+                    <p><a href="">Sign out</a></p>
                 </div>
 
                 <div id="dspChannels" class="channels"></div>
@@ -47,7 +47,9 @@
     </div>
 
     <!-- Script -->
+    <script src="../external-libraries/jquery-3.3.1.min.js"></script>
     <script src="../scripts/config.js"></script>
     <script src="../scripts/chatapp.js"></script>
+    <script src="../scripts/signOut.js"></script>
 </body>
 </html>
