--- a/views/logout.html
+++ b/views/logout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ChatApp - Main page</title>
+    <title>ChatApp - Logout</title>
     <link rel="stylesheet" href="../css/style.css">
     <script src="../external-libraries/jquery-3.3.1.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
@@ -12,9 +12,8 @@
         <!--Your code here-->
     </div>
 
-
     <!--Scripts-->
     <script src="../scripts/config.js"></script>
-    <script src="../scripts/chatapp.js"></script>
+    <script src="../scripts/logout.js"></script>
 </body>
 </html>
