--- a/views/index.html
+++ b/views/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <title>ChatApp - Chat now...</title>
     <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="external-resources/web-addons.css">
+    <!--<link rel="stylesheet" href="external-resources/web-addons.css">
     <script src="external-resources/jquery-3.3.1.min.js"></script>
-    <script src="external-resources/web-addons.js"></script>
+    <script src="external-resources/web-addons.js"></script>-->
     <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+	<script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-database.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
