tog bort type button så man kan trycka enter :P

--- a/collaboration/simon/views/login.html
+++ b/collaboration/simon/views/login.html
@@ -31,7 +31,7 @@
         <form action="#">
             <input type="text" id="email" placeholder="Email">
             <input type="password" id="pass" placeholder="Your password">
-            <button id="login" type="button">Login</button>
+            <button id="login">Login</button>
             <div id="link-registration">
                 <span>Don't have an account? <a href="../../views/registration.html">Sign Up!</a></span>
             </div>
