--- a/css/stylelogin.css
+++ b/css/stylelogin.css
@@ -108,6 +108,26 @@ a:link, a:visited {
     bottom: 10px;
 }
 
+/*Updating profile*/
+.title-text {
+    margin: 50px 0 auto;
+    color: #0009;
+    font-size: 1.4em;
+    text-align: center;
+}
+.form-container button:hover {
+    cursor: pointer;
+}
+.userinfo-photo{
+    width: 100px;
+    height: 100px;
+    background: transparent;
+    -moz-border-radius: 50px;
+    -webkit-border-radius: 50px;
+    border-radius: 50px;
+}
+/*End of updating profile*/
+
 @media(max-width: 768px) {
 
     header div {
