--- a/views/login.html
+++ b/views/login.html
@@ -2,24 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>ChatApp - Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link rel="stylesheet" href="../css/stylelogin.css">
-    <script src="../external-resources/jquery-3.3.1.min.js"></script>
+    <script src="../external-libraries/jquery-3.3.1.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
-
 </head>
 <body>
 <header>
     <div>
         <span id="logo">Chat <i class="far fa-comment"></i></span>
     </div>
-    <!--<div>
-        <a href="login.html" id="login"><span>Login</span></a>
-    </div>-->
 </header>
 <main>
     <div class="form-container">
