--- a/views/profile.html
+++ b/views/profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ChatApp - Profile</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/stylelogin.css">
     <script src="../external-libraries/jquery-3.3.1.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
 
