--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>ChatApp - Chat now...</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../external-resources/web-addons.css">
-    <script src="../external-resources/jquery-3.3.1.min.js"></script>
-    <script src="../external-resources/web-addons.js"></script>
+    <link rel="stylesheet" href="../external-libraries/web-addons.css">
+    <script src="../external-libraries/jquery-3.3.1.min.js"></script>
+    <script src="../external-libraries/web-addons.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet">
@@ -35,6 +35,7 @@
             <div id="dspPartFunctions">
                 <div id="dspUserInfo" class="userinfo">
                     <p id="dspCurrentUser"></p>
+                    <p><a href="profile.html">Profile</a></p>
                     <p><a href="logout.html">Sign out</a></p>
                 </div>
 
