--- a/views/logout.html
+++ b/views/logout.html
@@ -15,7 +15,7 @@
         let user = auth.currentUser;
         console.log(user);
         function goToSignIn() {
-            window.location.href = "login.html";
+            window.location.href = signInPage;
         }
 
 
