Improved JS and HTML codes

--- a/css/stylelogin.css
+++ b/css/stylelogin.css
@@ -86,7 +86,11 @@ a:link, a:visited {
 .form-container button:hover {
     background-color: rgba(20, 228, 80, 0.79);
 }
+.errorClass::placeholder {
+    color: red;
+    font-weight: bold;
 
+}
 #signup-text {
     margin: 50px 0 auto;
     color: #0009;
