--- a/views/profile.html
+++ b/views/profile.html
@@ -29,11 +29,11 @@
             </div>
             <div class="form-container">
                 <form>
-                    <input type="text" id="txtDisplayName" placeholder="Display name" required>
-                    <input type="password" id="txtNewPassword" placeholder="Set a new password" required minlength="6" maxlength="50">
-                    <input type="password" id="txtRetypePassword" placeholder="Confirm your new password" required minlength="6" maxlength="50">
-                    <input type="text" id="txtPhoneNumber" placeholder="Phone number">
-                    <input type="text" id="txtPhotoUrl" placeholder="Url to a photo">
+                    <input type="text" id="txtDisplayName" minlength="3" maxlength="50" placeholder="Display name" required>
+                    <input type="password" id="txtNewPassword" minlength="6" maxlength="50" placeholder="Set a new password" required>
+                    <input type="password" id="txtRetypePassword" minlength="6" maxlength="50" placeholder="Confirm your new password" required>
+                    <input type="text" id="txtPhoneNumber" maxlength="20" placeholder="Phone number">
+                    <input type="text" id="txtPhotoUrl" maxlength="200" placeholder="Url to a photo">
                     <button id="btnUpdateProfile" type="button">Update profile</button>
                 </form>
             </div>
