logout.js created and altered function

--- a/views/logout.html
+++ b/views/logout.html
@@ -9,9 +9,10 @@
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="../scripts/config.js"></script>
     <script>
-
+/*
         let user = auth.currentUser;
         console.log(user);
         function goToSignIn() {
@@ -36,9 +37,7 @@
                 console.log("authstatechanged FALSE");
                 goToSignIn(); //K added
             }
-        });
-
-
+        });*/
 
 
 
@@ -46,7 +45,6 @@
 </head>
 <body>
 
-<body>
 <div id="container">
     <!--Your code here-->
     <header>
@@ -65,6 +63,6 @@
 </div>
 
 
-
+<script src="../scripts/logout.js"></script>
 </body>
 </html>
