some css changes on header, also moved channel span to header

--- a/views/index.html
+++ b/views/index.html
@@ -21,12 +21,13 @@
                     <div>
                         <span id="logotyp">Chat <i class="far fa-comment"></i></span>
                     </div>
+					<span id="dspCurrentChannel"></span>
                 </div>
 
                 <div id="chatContents" class="chatContents">Tips! Choose a channel on the right panel!</div>
                 <div id="sendMessage" class="sendMessage">
                     <form action="#">
-                    <span id="dspCurrentChannel"></span><input id="txtMessage" type="text" maxlength="200">
+                    <input id="txtMessage" type="text" maxlength="200">
                     <button id="btnSend" class="button button-send-message">Send</button>
                     </form>
                 </div>
