error message login

--- a/views/login.html
+++ b/views/login.html
@@ -22,6 +22,7 @@
         <form action="#">
             <input type="text" id="email" placeholder="Email">
             <input type="password" id="pass" placeholder="Your password">
+            <span id="loginerrormessage"></span>
             <button id="login" class="login">Login</button>
             <div id="link-registration">
                 <span>Don't have an account? <a href="registration.html">Sign Up!</a></span>
