--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,14 @@ header, main, footer{width: 100%;}
     margin: 1% 1%;
 
 }
+#dspCurrentUser p img {
+
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+
 
 #logotyp {
     font-size: 3em;
