fixed userlist header and scroll behaviour

--- a/views/index.html
+++ b/views/index.html
@@ -41,7 +41,8 @@
                 </div>
 
                 <div id="dspChannels" class="channels"></div>
-                <div id="dspUserList" class="userlist">List of all user</div>
+				<div id="userlistHeader"><h3>Members</h3></div>
+                <div id="dspUserList" class="userlist"></div>
             </div>
         </div>
 
