--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ header, main, footer{width: 100%;}
     justify-content: space-between;
     align-items: center;
     background-color: #e5e5e5;
-    box-shadow: 0px 0px 7px;
+    box-shadow: 0px -2px 10px;
 
 }
 #logga div {
@@ -168,15 +168,23 @@ header, main, footer{width: 100%;}
 .userinfo a:hover{text-decoration: underline;}
 
 /*Channels*/
-.channels{padding: 10px;}
-.channel-item{cursor: pointer;color: #deb887;}
+.channels{padding: 10px; margin-left: 10px;}
+.channel-item{cursor: pointer;color: #deb887; margin-left: 10px;}
 .channel-item:hover{text-decoration: underline;}
 
 /*User list*/
 .userlist {
+    margin-left: 10px;
     padding: 10px;
     height: 200px;
     overflow-y: auto;
+}
+#userlistHeader {
+    margin-left: 20px;
+    margin-bottom: -15px;
+}
+.userlist p {
+    margin-left: 10px;
 }
 .userlist-online span {color: #00ce00;}
 .userlist-offline span {color: red;}
