--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,14 @@ header, main, footer{width: 100%;}
 
     height: 80%;
 }
+.messageBox {
+    margin: 12px;
+    padding: 5px;
+    background-color: #ffffff82;
+}
+.messageBox i {
+    font-size: 0.8em;
+}
 #logga {
     display: flex;
     justify-content: space-between;
