--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ header, main, footer{width: 100%;}
     justify-content: center;
     align-items: center;
     height: 100vh;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Helvetica Neue', 'Helvetica','Roboto', sans-serif;
 }
 
 /* Error messages */
@@ -66,6 +66,11 @@ header, main, footer{width: 100%;}
     bottom: 10px;
     border-radius: 40px;
 }
+
+.button-send-message {
+    border-radius: 10px;
+    padding: 14px 24px;
+}
 .button-signin:hover, .button-signup:hover, .button-send-message:hover {background-color: #003148;}
 
 .button-send-message:hover{}
@@ -88,7 +93,7 @@ header, main, footer{width: 100%;}
     flex-direction: column;
     /*justify-content: flex-end;*/
     width: 100%;
-    background-color: rgba(240, 240, 240, 0.85);
+    background-color: #fff;
 }
 #dspPartFunctions{
     width: 300px;
@@ -97,19 +102,31 @@ header, main, footer{width: 100%;}
 }
 #chatContents{height: 80%;}
 .messageBox {
-    margin: 12px;
-    padding: 5px;
-    background-color: #ffffff82;
+    margin: 12px 20px;
+    padding: 10px;
+    background-color: #fff;
+    border-bottom: 1px solid #8080808f
+
+}
+.messageBox:hover {
+    background-color: #e5e5e570;
 }
 .messageBox i {
     font-size: 0.8em;
+}
+.messageBox p {
+    font-weight: normal; letter-spacing: 0.08em;
+}
+.messageBox b {
+    letter-spacing: 0.08em;
 }
 #logga {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #e5e5e5;
+    background-color: #fff;
     box-shadow: 0px -2px 10px;
+    border-bottom: 2px solid grey;
 }
 #logga div {
     margin: 1% 1%;
@@ -135,7 +152,8 @@ header, main, footer{width: 100%;}
     /*padding-right: 10px;
     padding-left: 25%;*/
     height: 80px;
-    background-color: #cfcfcf;
+    background-color: #fff;
+    border-top: 2px solid grey;
 }
 .sendMessage input{
     /* Clear the user's operating system's theme */
@@ -160,12 +178,17 @@ header, main, footer{width: 100%;}
 .chatContents{padding: 5px;overflow-y: scroll; }
 
 .userinfo{padding: 10px;text-align: center;}
-.userinfo a{text-decoration: none; color: #cbcbcb;}
+.userinfo a{text-decoration: none; color: #fff; font-weight: lighter; letter-spacing: 0.08em;}
 .userinfo a:hover{text-decoration: underline;}
-
+.userinfo b {
+    color:white;
+    font-size: 1.4em;
+    font-weight: lighter;
+    letter-spacing: 0.1em;
+}
 /*Channels*/
 .channels{padding: 10px; margin-left: 10px;}
-.channel-item{cursor: pointer;color: #deb887; margin-left: 10px;}
+.channel-item{cursor: pointer;color: #deb887; margin-left: 10px; font-weight: lighter; font-size: 1.2em; letter-spacing: 0.08em;}
 .channel-item:hover{text-decoration: underline;}
 
 /*User list*/
@@ -175,12 +198,22 @@ header, main, footer{width: 100%;}
     height: 200px;
     overflow-y: auto;
 }
+
+#dspChannels h3, #userlistHeader h3 {
+    font-weight: lighter;
+    letter-spacing: 0.1em;
+    font-size: 1.4em;
+    color: white;
+}
 #userlistHeader {
     margin-left: 20px;
     margin-bottom: -15px;
 }
 .userlist p {
     margin-left: 10px;
+    color: #fff;
+    font-weight: lighter;
+    letter-spacing: 0.1em;
 }
 .userlist-online span {color: #00ce00;}
 .userlist-offline span {color: red;}
