--- a/views/index.html
+++ b/views/index.html
@@ -36,8 +36,10 @@
             <div id="dspPartFunctions">
                 <div id="dspUserInfo" class="userinfo">
                     <p id="dspCurrentUser"></p>
-                    <p><a href="profile.html">Profile</a></p>
-                    <p><a href="logout.html">Sign out</a></p>
+					<div id="hiddenUserInfo"style="display: none;">
+						<p><a href="profile.html">Profile</a></p>
+						<p><a href="logout.html">Sign out</a></p>
+					</div>
                 </div>
 
                 <div id="dspChannels" class="channels"></div>
