Added avatar to messages. Fixed bugs for datetime and current user menu (cursor: pointer)

--- a/css/style.css
+++ b/css/style.css
@@ -102,11 +102,14 @@ header, main, footer{width: 100%;}
 }
 #chatContents{height: 80%;}
 .messageBox {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+
     margin: 12px 20px;
     padding: 10px;
     background-color: #fff;
-    border-bottom: 1px solid #8080808f
-
+    border-bottom: 1px solid #8080808f;
 }
 .messageBox:hover {
     background-color: #e5e5e570;
@@ -120,6 +123,25 @@ header, main, footer{width: 100%;}
 .messageBox b {
     letter-spacing: 0.08em;
 }
+.message-content{width:100%;padding: 0 20px 0 20px;line-height: 22px;}
+.message-userinfo{
+    margin: 5px;
+    width: 100px;
+    text-align: center;
+    font-weight: bold;
+}
+.message-userinfo img{
+    width: 50px;
+    height: 50px;
+    background: transparent;
+    -moz-border-radius: 50px;
+    -webkit-border-radius: 50px;
+    border-radius: 50px;
+}
+.message-userinfo-not-exist img{
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+}
 #logga {
     display: flex;
     justify-content: space-between;
@@ -132,11 +154,12 @@ header, main, footer{width: 100%;}
     margin: 1% 1%;
 }
 #dspCurrentUser p img {
-
+    cursor: pointer;
     width: 100px;
     height: 100px;
     border-radius: 50%;
 }
+.currentUser{cursor: pointer;}
 #logotyp {
     font-size: 3em;
     font-family: 'Dancing Script', cursive;
