Improved JS code :-)

--- a/views/index.html
+++ b/views/index.html
@@ -29,8 +29,8 @@
                 <div id="chatContents" class="chatContents">Tips! Choose a channel on the right panel!</div>
                 <div id="sendMessage" class="sendMessage">
                     <form action="#">
-                    <input id="txtMessage" type="text" maxlength="200">
-                    <button id="btnSend" class="button button-send-message">Send</button>
+                    <input id="txtMessage" type="text" minlength="1" maxlength="200">
+                    <button id="btnSend" type="button" class="button button-send-message">Send</button>
                     </form>
                 </div>
             </div>
